[gd_scene load_steps=10 format=3 uid="uid://b7lr1wq1q0p31"]

[ext_resource type="Script" uid="uid://cf57hhtjryd1b" path="res://MVVM/view/list.gd" id="1_543ag"]
[ext_resource type="Script" uid="uid://cjyr3vtryfauw" path="res://components/behavior/container_agent.gd" id="2_nwp21"]
[ext_resource type="Texture2D" uid="uid://7lwx24evxq4r" path="res://assets/icons/drag_handle_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.svg" id="3_rnxla"]
[ext_resource type="PackedScene" uid="uid://betgkcpypu1w1" path="res://MVVM/view/card.tscn" id="3_u5tjx"]
[ext_resource type="Script" uid="uid://bgrec0bl0k8ih" path="res://components/behavior/free_parent_when_start.gd" id="4_p1eec"]
[ext_resource type="Script" uid="uid://nbiblih8xlfr" path="res://components/dragdrop/drag_button.gd" id="4_y37op"]
[ext_resource type="Script" uid="uid://d2sl0e538b70l" path="res://components/behavior/auto_scroll_container.gd" id="6_edk1u"]
[ext_resource type="Script" uid="uid://dfwg4ilebio4b" path="res://components/dragdrop/drop_area.gd" id="8_ijj0h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hl48u"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="List" type="PanelContainer"]
custom_minimum_size = Vector2(256, 0)
offset_right = 256.0
offset_bottom = 620.0
size_flags_vertical = 3
mouse_force_pass_scroll_events = false
script = ExtResource("1_543ag")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DragButton" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 6
texture_normal = ExtResource("3_rnxla")
script = ExtResource("4_y37op")
drag_key = "list"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 1
text = "List Title"

[node name="AddButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "x"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="AutoScrollContainer" type="Node" parent="MarginContainer/VBoxContainer/ScrollContainer" node_paths=PackedStringArray("scroll_container")]
script = ExtResource("6_edk1u")
scroll_container = NodePath("..")

[node name="ContainerAgent" type="Node" parent="MarginContainer/VBoxContainer/ScrollContainer" node_paths=PackedStringArray("container")]
unique_name_in_owner = true
script = ExtResource("2_nwp21")
container = NodePath("../MarginContainer/CardContainer")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="CardContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Card" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/CardContainer" instance=ExtResource("3_u5tjx")]
layout_mode = 2
script = null

[node name="FPWS" type="Node" parent="MarginContainer/VBoxContainer/ScrollContainer/MarginContainer/CardContainer/Card"]
script = ExtResource("4_p1eec")

[node name="DropArea" type="Control" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("8_ijj0h")
drop_key = "card"

[node name="Panel" type="Panel" parent="DropArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hl48u")
